src/snapshots/kbnf_syntax__parser__test__alternation_precidence_group.snap
---
source: src/parser.rs
expression: result
---
- "\n             filter ::= 'a' | ('b' 'c');\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Terminal: a
        - Alternation
        - Group:
            Multiple:
              - Terminal: b
              - Terminal: c
