src/snapshots/kbnf_syntax__parser__test__alternation_precidence_nested.snap
---
source: src/parser.rs
expression: result
---
- "\n             filter ::= 'a' | 'b'  'c' | 'd';\n        "
- - lhs: filter
    rhs:
      Multiple:
        - Symbol:
            - Terminal: a
            - Alternation
            - Terminal: b
        - Symbol:
            - Terminal: c
            - Alternation
            - Terminal: d
