src/snapshots/kbnf_syntax__parser__test__comment_except.snap
---
source: src/parser.rs
expression: result
---
- "\n        (*114514*)\n            except ::= except!(    '\\n\\n');  (*114514*)\n            (*114\n            \n            except ::= except!(    '\\n\\n');\n            \n            514*)\n            (*114514*)\n        "
- - lhs: except
    rhs:
      EXCEPT:
        - Terminal: "\n\n"
        - ~
