src/snapshots/kbnf_syntax__parser__test__concat_precidence_reverse.snap
---
source: src/parser.rs
expression: result
---
- "\n             filter ::= 'a' , 'b' , 'c' | 'd';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Terminal: a
        - Concatenation
        - Symbol:
            - Terminal: b
            - Concatenation
            - Symbol:
                - Terminal: c
                - Alternation
                - Terminal: d
