src/snapshots/kbnf_syntax__parser__test__escaped_nonterminal.snap
---
source: src/parser.rs
expression: result.unwrap()
---
- "\nsingle_quote ::= '\\t\\r\\n\\'\\u004C';\ndouble_quote ::= \"\\t\\r\\n\\\"\\u004C\";\nregex_double_quote ::= #\"\\t\\r\\n\\\"\\u004C\";\nregex_single_quote ::= #'\\t\\r\\n\\'\\u004C';\nstring ::= #'\"([^\\\\\"\\u0000-\\u001f]|\\\\[\"\\\\bfnrt/]|\\\\\\\\u[0-9A-Fa-f]{4})*\"';\n        "
- - lhs: single_quote
    rhs:
      Terminal: "\t\r\n'L"
  - lhs: double_quote
    rhs:
      Terminal: "\t\r\n\"L"
  - lhs: regex_double_quote
    rhs:
      RegexString: "\t\r\n\"L"
  - lhs: regex_single_quote
    rhs:
      RegexString: "\t\r\n'L"
  - lhs: string
    rhs:
      RegexString: "\"([^\\\"\u0000-\u001f]|\\[\"\\bfnrt/]|\\\\u[0-9A-Fa-f]{4})*\""
