src/snapshots/kbnf_syntax__parser__test__except_special_nonterminal2.snap
---
source: src/parser.rs
expression: result
---
- "\n             except ::= except!(    '\\n\\n');\n        "
- - lhs: except
    rhs:
      EXCEPT:
        - Terminal: "\n\n"
        - ~
