src/snapshots/kbnf_syntax__parser__test__regex_complement.snap
---
source: src/parser.rs
expression: result.unwrap()
---
- "\n            filter ::= #ex\"[a-z]+\";\n        "
- - lhs: filter
    rhs:
      RegexComplement: "(?:[a-z]+)\\z"
