src/snapshots/kbnf_syntax__parser__test__simple_alternation.snap
---
source: src/parser.rs
expression: result
---
- "\n            filter ::= a | b;\n            a ::= 'a';\n            b ::= 'b';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Nonterminal: a
        - Alternation
        - Nonterminal: b
  - lhs: a
    rhs:
      Terminal: a
  - lhs: b
    rhs:
      Terminal: b
